<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/pf_linear_divider"
        android:orientation="vertical"
        android:showDividers="middle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/icon_size_max"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/margin"
            android:paddingVertical="@dimen/half_margin">

            <ImageView
                android:id="@+id/btn_title"
                android:layout_width="@dimen/icon_size_small"
                android:layout_height="@dimen/icon_size_small"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_event_title_usual" />

            <EditText
                android:id="@+id/ed_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin"
                android:autofillHints="@string/event_title"
                android:background="@null"
                android:hint="@string/event_title"
                android:inputType="text"
                android:maxLength="60"
                android:textColor="@color/default_text_color"
                android:textSize="@dimen/subtitle_text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="@dimen/icon_size_max"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/margin"
            android:paddingVertical="@dimen/half_margin">

            <ImageView
                android:id="@+id/btn_des"
                android:layout_width="@dimen/icon_size_small"
                android:layout_height="@dimen/icon_size_small"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_event_description" />

            <EditText
                android:id="@+id/ed_des"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin"
                android:background="@null"
                android:hint="@string/event_description"
                android:inputType="textMultiLine"
                android:maxLines="2"
                android:textSize="@dimen/subtitle_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/margin"
            android:paddingVertical="@dimen/half_margin"
            android:showDividers="middle">

            <LinearLayout
                android:id="@+id/date_st_holder"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_st_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:text="@string/event_st_title"
                    android:textSize="@dimen/body_text_size" />

                <TextView
                    android:id="@+id/tv_start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:textColor="@color/dark_text_color"
                    android:textSize="@dimen/subtitle_text_size"
                    tools:text="2019年11月10日" />

                <TextView
                    android:id="@+id/tv_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:textSize="@dimen/subtitle_text_size"
                    tools:text="9:00" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/half_margin"
                android:layout_marginEnd="@dimen/half_margin"
                android:background="@color/pf_view_divider_color" />

            <LinearLayout
                android:id="@+id/date_end_holder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_end_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:text="@string/event_end_title"
                    android:textSize="@dimen/body_text_size" />

                <TextView
                    android:id="@+id/tv_end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:textColor="@color/dark_text_color"
                    android:textSize="@dimen/subtitle_text_size"
                    tools:text="2020年12月10日" />

                <TextView
                    android:id="@+id/tv_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:textSize="@dimen/subtitle_text_size"
                    tools:text="10:00" />

            </LinearLayout>
        </LinearLayout>
        <!-- <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:minHeight="@dimen/icon_size_max"
             android:orientation="horizontal"
             android:paddingHorizontal="@dimen/margin"
             android:paddingVertical="@dimen/half_margin">

             <ImageView
                 android:id="@+id/btn_ReMin"
                 android:layout_width="@dimen/icon_size_small"
                 android:layout_height="@dimen/icon_size_small"
                 android:layout_gravity="center_vertical"
                 android:src="@drawable/ic_event_reminder" />

             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="@dimen/margin"
                 android:layout_weight="1"
                 android:text="@string/event_reminder_minutes"
                 android:textSize="@dimen/subtitle_text_size" />

             <androidx.appcompat.widget.AppCompatSpinner
                 android:id="@+id/sp_ReMin"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="center_vertical"
                 android:entries="@array/reminder_min"
                 android:textColor="@color/dark_text_color"
                 android:textSize="@dimen/subtitle_text_size" />

         </LinearLayout>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="@dimen/icon_size_max"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/margin"
            android:paddingVertical="@dimen/half_margin">

            <ImageView
                android:id="@+id/btn_is_personal"
                android:layout_width="@dimen/icon_size_small"
                android:layout_height="@dimen/icon_size_small"
                android:src="@drawable/ic_event_personal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin"
                android:layout_weight="1"
                android:text="@string/event_is_personal"
                android:textSize="@dimen/subtitle_text_size" />

            <Switch
                android:id="@+id/sw_is_personal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" />
        </LinearLayout>
        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_margin="@dimen/margin"
            android:layout_marginTop="300dp"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:padding="12dp"/>


    </LinearLayout>
</ScrollView>
